--- a/style.css
+++ b/style.css
@@ -1,76 +1,111 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	overflow-x: hidden;/*no scroll on x*/
+	background-color:rgb(10, 3, 41);
+}
 * {box-sizing: border-box}
-
 
 #openImg{
   width: 70%;
 }
+
 .btn {
  position: absolute;
-   transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  background-color: rgb(187, 105, 173);
-  color: rgb(156, 221, 233);
+/*    transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); */
+  background-color: #FFB8FF;
+  color: #FF0000;
   font-size: 16px;
-  padding: 12px 24px;
-  border: none;
+/*   padding: 12px 24px;
+ */  border: 1px solid red;
   cursor: pointer;
   border-radius: 5px;
   text-align: center;
-  width: 10%;
-  font-weight: bold;
+/*   width: 25%;
+ */  font-weight: bold;
   font-size: xx-large;
+  overflow: hidden;
 
 } 
 
 #regButton{
   top: 70%;
-  left: 30%;
-  width: 15%;
-  height: 10%;
+  left: 20%;
+  width: 20%;
+/*  height: 10%;
+ */  }
   
-}
 #loginButton{
   top: 70%;
-  left: 70%;
-  width: 15%;
-  height: 10%;
-}
-
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
+  right: 20%;
   width: 20%;
+/*  height: 10%;
+ */}
+
+button ,.random {
+	font-size:2rem;
+	vertical-align:middle;
+	color:rgb(101, 94, 195); 
+	font-weight: bold;
+  text-shadow: 
+	0 0px 3px black,
+	0 2px 2px black;
+	background-color:#FFB8FF;
+  border: 5px double #00FF00;
+  border-radius:5px;
+  cursor: pointer;
+  width: 33%;
+  height:4rem;
   opacity: 1;
 }
 
+
 button:hover {
-  opacity:0.8;
+	transform:scale(1.1);
+ opacity:0.8;
 }
+fieldset{border:2px dashed rgb(82, 204, 82);} /*frame of form ----*/
+
 /* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 50%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
+input[type]{
+  border-radius: 4px;
+}
+.submit{
+	vertical-align:middle;
+	height:3rem;
+	font-size:1.5rem;
+	color:#2121DE;
+	background-color:rgb(86, 235, 227);
+  border-radius: 4px;
+  	font-weight: bold;
+  text-shadow: 
+	0 2px 10px black,
+    -0.5px 2px 2px  #00FF00,
+	-1px 2px 2px  #00FF00,
+    -1.5px 3px 1px #2121DE;
+}
+input[type=color]{
+	height:3rem;
+	width:3rem;
+  border-radius: 4px;
+}
+
+label {
+	text-align:left;
+/*  padding: 12px 12px 12px 0;
+ */display: inline-block;
 }
 
 input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
+/* background-color: red;
+ */  border:1px solid blue;
 }
-
+/*
 hr {
-  border: 1px solid #f1f1f1;
+  border: 100px solid red;
   margin-bottom: 25px;
 }
-
+*/
 
 #pauseAudio{
   background-color: #f44336;
@@ -83,23 +118,25 @@ hr {
 }
 
 /* Extra styles for the cancel button */
+/*
 .cancelbtn {
   padding: 14px 20px;
   background-color: #f44336;
 }
 
 /* Float cancel and signup buttons and add an equal width */
+/*
 .cancelbtn, .signupbtn {
   float: left;
   width: 50%;
 }
-
-/* Add padding to container elements */
+*/
+/* Add padding to container elements *//*
 .container {
-  padding: 16px;
+ // padding: 16px;
 }
 
-/* Clear floats */
+/* Clear floats *//*
 .clearfix::after {
   content: "";
   clear: both;
@@ -107,64 +144,99 @@ hr {
 }
 
 /* Change styles for cancel button and signup button on extra small screens */
+/*
 @media screen and (max-width: 300px) {
   .cancelbtn, .signupbtn {
      width: 100%;
   }
+}*/
+span{
+	color: #FFFF00;
+	font-size:2rem;
+	font-weight: bold;
+  font-family: Helvetica;
+  text-shadow: 
+	0 2px 10px black,
+    -0.5px 2px 2px  rgb(0, 162, 255),
+	-1px 2px 2px  #00FF00,
+    -1.5px 3px 10px #2121DE,-1.5px 3px 10px #2121DE,-1.5px 3px 10px #2121DE,-1.5px 3px 10px #2121DE;
 }
 
-#signupForm {
-  width: 670px;
+form{
+	margin-top:1rem;
+text-align: center;
+	margin-left: 10%;
+	width:80%;
 }
+form legend{/*title of form*/
+text-align: center;
+}
+
+form input{
+	display:block;
+margin-right: auto;
+margin-left: auto;
+width:30%;
+}
+
+/*#signupForm { }
+*/
 #signupForm label.error {
   margin-left: 10px;
   width: auto;
   display: inline;
 }
-#loginForm {
-  width: 670px;
-}
+/* #loginForm {  }
+*/
 header {
-	/* justify-content: space-between; 
-  align-items: center;*/
-  background-color: #333;
-  color: wheat;
-  position: relative;
-	top: 0;
-	width: 100%;
-	height: 80px; /* Height of the footer */
-  font-size: 140%;
-  
+	display:inline-block;
+	width:100%;
+	height:3rem;
+  text-align:center;
+  background-image: radial-gradient(black,#141414, black, black);
+  color: rgb(84, 192, 192);
+ font-size:1.2rem;
+
 } 
 #logo{
-  height: 76px;
+	height:3rem;
 }
 
+#headtitle{vertical-align:0.7rem;}
+
+#about{
+	background:#FFB852;
+	color:black;
+  font-weight:bold;
+;
+
+}
 .tablink {
-  background-color: #555;
+  background-image: linear-gradient(#141414,#141414, black, #141414,#141414);
   color: white;
   float: left;
-  border: none;
-  outline: none;
+  border: 1px solid white;
+  outline: 1px solid white;
   cursor: pointer;
-  padding: 14px 16px;
-  font-size: 17px;
+  margin-top:2px;
+  font-size: 1.5rem;
   width: 20%;
+  
 }
-
+/*
 .tablink:hover {
   background-color: #777;
-}
+}*/
 .tablink a {
-  color: #FFFFFF;
-   text-decoration: none;
+	color:white;
+	text-decoration: none;
+   
  }
 
 /* Style the tab content */
 .content {
-  color: darkblue;
-  display: none;
-  padding: 50px;
+
+  color: rgb(202, 221, 36);
   text-align: center;
 }
 
@@ -172,8 +244,9 @@ header {
 
 
 /* Links inside the navbar */
+/*
 .navbar a {
-  float: center;
+ // float: center;
   display: block;
   color: darkblue;
   text-align: center;
@@ -182,35 +255,82 @@ header {
 }
 .navbar  li {
 	display: inline-block;
-  padding: 0px 25px;
-  margin: 0px;
+  //padding: 0px 25px;
+ // margin-top: 50px;
 }
-
-/* Change background on mouse-over */
+*/
+/* Change background on mouse-over *//*
 .navbar a:hover {
   background: #ddd;
   color: black;
   
 }
+*/
+#game {
+	display:inline-block;
+/* border: 13px solid green;
+ */}
+
+#frame {
+	
+	border:1px dashed #141414;
+	border-radius:10%;
+display:flex;
+flex-wrap: nowrap;
+justify-content: center;
+
+}
 #leftSide{
-  float:left;
+	position:relative;
+	left:0;
+	top:10%;
   width: 15%;
   text-align: center;
-
+  border: 3px solid grey;
+  border-radius:5px;
+   background-image: linear-gradient(to left,#141414, #242424);
+ 
 
 }
+#leftSide input[type]{
+		display:block;
+margin-right: auto;
+margin-left: auto;
+	width:50%;
+}
+#canvas{
+
+		height:100%;
+/*  border: 13px solid yellow;*/ }
+ #playGame{
+	 order:2; /*flex order - put the bord between*/
+   border: 3px solid grey;
+}
+
+
 #rightSide{
-  float:right;
+	order:3;
+	display:flex;
+	   background-image: linear-gradient(to right,#141414, #242424);
   width: 20%;
   text-align: center;
-
-
-}
-#playGame{
-  float:center;
-  width:64%;
+  border: 3px solid grey;
+  border-radius:5px;
+background-position: 50% 40%;
 
 }
+#rightSide table{
+	table-layout:fixed;
+	width:100%;
+}
+#rightSide input[type]{
+	width:90%;
+}
+
 .btnset{
   width: 50%;
+  font-size: medium;
+}
+footer{
+  color: #2121DE;
 }
